Improve padding of modals to prevent overlap with close button

--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -16,7 +16,7 @@
   background-color: var(--bg-color);
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
-  padding: 1rem;
+  padding: 1.8rem 1rem 1rem;
   position: relative;
   display: flex;
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
